feat : 태그 리스트단위로 등록 기능